# fwf

./: .gitignore  LICENSE  README.md  app.py  fwif.c  fwif.py  program.c  pyproject.toml  run.sh  run_app.sh  run_window.sh
examples/: dynamic_list_app.py
fwif/: __init__.py  component.py  floating_window.py  keybindings.py
